# threadpool

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: libthreadpool-config.cmake.in  utils.cmake
examples/add/: CMakeLists.txt  main.cpp
include/libthreadpool/: export.h  libthreadpool.hpp
include/threadpool/: threadpool.hpp
include/threadpoollib/: datapool.hpp  threadpool.hpp  threadpoollib.hpp
src/: libthreadpool.cpp  threadpool.cpp  threadpoollib.cpp
tests/: CMakeLists.txt  add_test.cpp  test.cpp
